# watchbot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  __init__.py  plugin.yaml  pyproject.toml  setup.py  skills.sh.json
docs/: x-twitter-source-options.md
src/watchbot/: __init__.py  __main__.py
src/watchbot/cli/: commands.py
src/watchbot/core/: __init__.py  alerts.py  config.py  state.py
src/watchbot/monitors/: blogwatcher.py  docker.py  home_assistant.py  homelab.py  system.py  x_twitter.py
src/watchbot/tools/: alerts.py  dashboard.py  queries.py
src/watchbot/web/: dashboard.py
tests/: test_monitors.py
