[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "watchbot"
version = "0.1.0"
description = "Unified homelab + social media monitoring plugin for Hermes Agent"
requires-python = ">=3.11"
authors = [{name = "Piyush Mehta", email = "me@piyushmehta.com"}]
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "ruff>=0.4.0"]
dashboard = ["flask>=3.0", "plotly>=5.20"]
twitter = ["tweepy>=4.14"]
all = ["watchbot[dashboard,twitter]"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
